# GenHotkeys

./: .gitmodules  Build.bat  CMakeLists.txt  CmakeLists.txt  README.md  Run.bat  zBuildAndRun.bat
.github/workflows/: Build.yml  Cppcheck.yml  PRNightlyComment.yml  ReleaseBuild.yml
docs/: TechTreeJson.md  Translation.md
src/: CMakeLists.txt  CmakeLists.txt  Convert.cpp  Convert.hpp  DiscordManager.cpp  DiscordManager.hpp  DiscordRPCManager.cpp  DiscordRPCManager.hpp  Faction.cpp  Faction.hpp  FactionsManager.cpp  FactionsManager.hpp  Info.hpp  Logger.cpp  Logger.hpp  Main.cpp  MainStarter.cpp  Profile.cpp  Profile.hpp  ProgramConstants.cpp  ProgramConstants.hpp  Settings.cpp  Settings.hpp  Settings.json  SteamManager.cpp  SteamManager.hpp  StringExt.cpp  StringExt.hpp  TechTree.json
src/Core/: Convert.cpp  Faction.cpp  Faction.hpp  Logger.cpp  Logger.hpp  ProgramConstants.cpp  ProgramConstants.hpp  Settings.cpp  Settings.hpp
src/Extensions/: BoolExt.hpp  ExceptionExt.hpp  L10NExt.cpp  L10NExt.hpp  StringExt.hpp
src/GUI/: ActionHotkeyWidget.cpp  ActionHotkeyWidget.hpp  CMakeLists.txt  CmakeLists.txt  EditorWindow.cpp  EditorWindow.hpp  EditorWindowWrapper.cpp  EditorWindowWrapper.hpp  GreetingWindow.cpp  GreetingWindow.hpp  ImageManager.cpp  ImageManager.hpp  LoadFromTheFileWindow.cpp  LoadFromTheFileWindow.hpp  LoadFromTheGameWindow.cpp  LoadFromTheGameWindow.hpp  LoadWindow.cpp  LoadWindow.hpp  SelectProfileWindow.cpp  SelectProfileWindow.hpp  SetUpWindowsWrapper.cpp  SetUpWindowsWrapper.hpp  SettingsWindow.cpp  SettingsWindow.hpp  WindowManager.cpp  WindowManager.hpp
src/GUI/QtSources/: EditorDescription.rc  StarterDescription.rc
src/GUI/Theme/: Styles.css
src/GUI/Translations/: ru.ts
src/Managers/: DiscordManager.cpp  DiscordManager.hpp  FactionsManager.cpp  FactionsManager.hpp  SteamManager.cpp
src/Parsers/: CSFParser.cpp  CSFParser.hpp  GINIParser.cpp  GINIParser.hpp  JSONFile.cpp  JSONFile.hpp  TextParser.hpp
src/Resources/: Settings.json  TechTree.json
src/Resources/Profiles/: Styles.css
src/Resources/Profiles/Continue/: TechTree.json
src/Resources/Profiles/Continue/Theme/: Styles.css
src/Resources/Profiles/Contra/: TechTree.json
src/Resources/Profiles/Contra/Theme/: Styles.css
src/Resources/Profiles/Generals/: Profile.json  TechTree.json
src/Resources/Profiles/Generals/Images/: .gitkeep
src/Resources/Profiles/Generals/Theme/: Overrides.css  Styles.css
src/Resources/Profiles/GeneralsZH/Theme/: Styles.css
src/Resources/Profiles/ROTR/: TechTree.json
src/Resources/Profiles/ROTR/Theme/: Styles.css
src/Resources/Profiles/ZeroHour/: Profile.json
src/Resources/Profiles/ZeroHour/Theme/: Styles.css
src/Resources/QtSources/: EditorDescription.rc  StarterDescription.rc
src/Resources/Translations/: ru.ts
src/Windows/: Locale.cpp  Locale.hpp  Registry.cpp  Registry.hpp
